--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <p align="center"> Sajan Kedia </p>
+title: <p align="center"> Hari Satuluri </p>
 logo: /assets/img/logo.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
